--- a/email.html
+++ b/email.html
@@ -147,3 +147,21 @@
     </div>
 </body>
 </html>
+Email Templates for Webspirre - Design Inspiration Focus
+Confirm Sign Up
+Subject: Welcome to Webspirre! Confirm Your Sign-Up for Design Inspiration
+
+Body:
+
+Hi [User Name],
+
+Thank you for signing up for Webspirre! We're thrilled to help you find the best design inspiration from the internet's top websites.
+
+Please confirm your email address to complete your registration and start exploring real and practical web design ideas.
+
+[Confirm Your Email]
+
+If you did not sign up for Webspirre, please ignore this email.
+
+Best,
+The Webspirre Team
